# cw-acl-v1

./: .gitignore  Cargo.toml  Makefile  README.md  client.sh  rustfmt.toml
builds/: latest
builds/build-dev/: cw_acl.wasm  latest-contract  tx
builds/build-faucet-acl-dev/: cw_acl.wasm  latest-contract
builds/build-mainnet-0.0.2/: cw_acl.wasm  latest-contract  tx
src/: api.rs  client.rs  contract.rs  error.rs  lib.rs  models.rs  msg.rs  state.rs  util.rs
src/execute/: add_admin.rs  allow.rs  allow_role.rs  authorize.rs  ban.rs  deny.rs  deny_role.rs  disallow.rs  disallow_role.rs  grant_roles.rs  mod.rs  open.rs  remove_admin.rs  restrict.rs  revoke.rs  revoke_roles.rs  set_owner.rs  set_superuser.rs  unset_superuser.rs
src/query/: get_principal_resources.rs  get_principal_roles.rs  get_resource.rs  has_roles.rs  is_admin.rs  is_allowed.rs  is_authorized.rs  is_denied.rs  is_role_allowed.rs  is_superuser.rs  mod.rs  select.rs
